[BM-292] :white_check_mark: 테스트 깨지는 부분 수정